@@ -51,6 +51,7 @@ sources = """
           download_certificate_panel.cc
           file_picker_ctrl.cc
           film_editor.cc
+          film_name_location_dialog.cc
           film_viewer.cc
           filter_dialog.cc
           filter_editor.cc
@@ -70,7 +71,6 @@ sources = """
           move_to_dialog.cc
           nag_dialog.cc
           name_format_editor.cc
-          new_film_dialog.cc
           normal_job_view.cc
           playhead_to_timecode_dialog.cc
           playhead_to_frame_dialog.cc
