@@ -1,5 +1,7 @@
 2017-05-09  Carl Hetherington  <cth@carlh.net>
 
+	* Basic save-as (duplicate) feature (#746).
+
 	* Write a simple cover sheet when making a DCP (#1039).
 
 2017-05-08  Carl Hetherington  <cth@carlh.net>
